<resources>
    <string name="app_name">AlkeWallet</string>

    <!-- Buttons -->
    <string name="action_create_new_account">Crear una cuenta nueva</string>
    <string name="action_already_account">¿Ya tenés una cuenta?</string>
    <string name="action_create_account">Crear cuenta</string>
    <string name="action_init_session">Iniciar sesión</string>
    <string name="action_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="action_request_money">Ingresar dinero</string>
    <string name="action_send_money">Enviar dinero</string>
    <string name="action_profile">Perfil del usuario</string>
    <string name="action_information">Mi información</string>
    <string name="action_cards">Mis tarjetas</string>
    <string name="action_settings">Opciones</string>
    <string name="action_help">Centro de ayuda</string>
    <string name="action_not_supported">Opción no disponible</string>

    <!-- Validation -->
    <string name="invalid_user">Correo electrónico inválido</string>
    <string name="invalid_password">La contraseña debe tener una longitud de 6 a 10 caracteres</string>
    <string name="invalid_password_confirm">Las contraseñas no coinciden</string>
    <string name="invalid_required">Campo requerido</string>
    <string name="invalid_amount">El monto debe ser mayor a 0 (cero)</string>

    <!-- Welcome -->
    <string name="welcome_safe_place">El lugar más seguro para tu dinero</string>

    <!-- Sign up -->
    <string name="signup_title">Registrarse y empezar a transferir</string>
    <string name="signup_hint_name">Nombre</string>
    <string name="signup_hint_lastname">Apellido</string>
    <string name="signup_hint_email">Email</string>
    <string name="signup_hint_password">Contraseña</string>
    <string name="signup_hint_password_confirm">Reingresar contraseña</string>
    <string name="signup_failed">Ocurrió un error al intentar registrar el nuevo usuario.</string>
    <string name="signup_ok">Usuario generado con éxito. Ya podes iniciar sesión en la aplicación.</string>

    <!-- Log in -->
    <string name="login_title">¡Logueá y empezá a transferir!</string>
    <string name="login_hint_user">Email</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_failed">Ocurrió un error al intentar iniciar sesión.</string>

    <!-- Home -->
    <string name="home_balance">Balance total</string>
    <string name="home_hi">¡Hola %1$s!</string>
    <string name="home_hi_default">¡Hola!</string>
    <string name="home_transactions_last">Últimas transacciones</string>
    <string name="home_transactions_empty">No hay transacciones registradas.</string>
    <string name="home_transactions_error">Ocurrió un error cargando las últimas transacciones. Por favor, reintente en unos minutos.</string>

    <!-- Mi perfil -->
    <string name="profile_title">Mi perfil</string>

    <!-- Enviar dinero -->
    <string name="send_money_title">Enviar dinero</string>
    <string name="send_money_hint_amount">Cantidad a ingresar</string>
    <string name="send_money_hint_description">Notas de transferencia (opcional)</string>

    <!-- Recibir dinero -->
    <string name="request_money_title">Recibir dinero</string>
    <string name="request_money_hint_amount">Cantidad a ingresar</string>
    <string name="request_money_hint_description">Notas de transferencia (opcional)</string>
</resources>