<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.alkemy.alkewallet.ui.view.fragment.home.HomeFragment"
        android:label=""
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_requestMoneyFragment"
            app:destination="@id/requestMoneyFragment" />

        <action
            android:id="@+id/action_homeFragment_to_sendMoneyFragment"
            app:destination="@id/sendMoneyFragment" />

        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/requestMoneyFragment"
        android:name="com.alkemy.alkewallet.ui.view.fragment.requestmoney.RequestMoneyFragment"
        android:label="@string/request_money_title"
        tools:layout="@layout/fragment_request_money">
        <action
            android:id="@+id/action_requestMoneyFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/sendMoneyFragment"
        android:name="com.alkemy.alkewallet.ui.view.fragment.sendmoney.SendMoneyFragment"
        android:label="@string/send_money_title"
        tools:layout="@layout/fragment_send_money">
        <action
            android:id="@+id/action_sendMoneyFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.alkemy.alkewallet.ui.view.fragment.profile.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile" />
</navigation>