<?xml version="1.0" encoding="utf-8"?><!-- Auto layout, variables, and unit scale are not yet supported -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/welcome_background"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/logo"
        android:layout_width="106dp"
        android:layout_height="137dp"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextInverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fab_horizontal_margin"
        android:gravity="center"
        android:text="@string/welcome_safe_place"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fab_horizontal_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:text="@string/action_create_new_account"
        app:layout_constraintBottom_toTopOf="@id/button_login" />

    <Button
        android:id="@+id/button_login"
        style="@style/ButtonLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fab_horizontal_margin"
        android:layout_marginBottom="@dimen/extra_margin"
        android:text="@string/action_already_account"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>