<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".requestmoney.RequestMoneyFragment">

    <ImageView
        android:id="@+id/imageview_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:src="@drawable/icon_person"
        app:layout_constraintBottom_toTopOf="@+id/input_amount"
        app:layout_constraintEnd_toStartOf="@+id/textview_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fab_horizontal_margin"
        android:text="Reem Khaled"
        app:layout_constraintBottom_toTopOf="@+id/textview_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageview_profile"
        app:layout_constraintTop_toTopOf="@+id/imageview_profile" />

    <TextView
        android:id="@+id/textview_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fab_horizontal_margin"
        android:text="reem_1993@gmail.com"
        app:layout_constraintBottom_toBottomOf="@id/imageview_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageview_profile"
        app:layout_constraintTop_toBottomOf="@+id/textview_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fab_horizontal_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:hint="@string/request_money_hint_amount"
        app:layout_constraintTop_toBottomOf="@id/imageview_profile">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fab_horizontal_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:hint="@string/request_money_hint_description"
        app:layout_constraintTop_toBottomOf="@id/input_amount">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="6" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fab_horizontal_margin"
        android:layout_marginBottom="@dimen/extra_margin"
        android:drawableStart="@drawable/icon_request"
        android:enabled="false"
        android:paddingHorizontal="@dimen/fab_margin"
        android:text="@string/action_request_money"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>